--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "cviebrock/eloquent-sluggable": "^11.0",
         "inertiajs/inertia-laravel": "^1.3",
+        "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
